# neucalc

./: Cargo.toml
src/: calculator.rs  main.rs
src/base/: mod.rs
src/calc_base/: expr.rs  func_call.rs  mod.rs  rational.rs  std_funcs.rs  value.rs  value_algebra.rs
src/calc_strategies/: always_zero_strategy.rs  common.rs  mod.rs  recursive_scan_strategy.rs  return_always_zero_strategy.rs
